docs: CLAUDE.md, README.md, README.ko.md 추가